进行大规模重构